src/css/main.css
@import url("https://fonts.googleapis.com/css?family=Indie+Flower&display=swap");

body {
  font-family: "Indie Flower", cursive, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
  color: #50250c;
  overflow-x: hidden;
  min-width: 400px;
}
.dark {
  background-color: #202020;
  color: #bcb7b6;
}
.dark li {
  background-color: none;
  box-shadow: none;
}
.dark h1 {
  text-shadow: none;
  font-weight: 800;
}
.dark #sticker {
  border: 10px solid #202020;
}
.darknav {
  background-color: #202020;
  color: #5e5c5c;
}

header {
  display: flex;
  flex-direction: row;
  height: 5vw;
  min-height: 60px;
}
nav {
  display: flex;
  font-size: 1.5rem;
  flex: auto;
}
header * {
  padding: 0.1em 0.5em;
  align-items: center;
  display: flex;
  flex-direction: row;
}
nav span ul {
  display: flex;
  flex-direction: row;
}
nav li:hover {
  background-color: #f8f0de;
  border-radius: 45%;
  box-shadow: 3px 3px 3px #f8f0de;
}

nav span {
  justify-content: flex-end;
  margin-left: auto;
}
header h1 {
  color: #50250c;
  text-shadow: 3px 3px 3px #f4ca5c, 3px 3px 5px #f4ca5c, 3px 3px 15px #f4ca5c,
    3px 3px 18px #f4ca5c;
  text-decoration: none;
  font-size: 1.7rem;
  margin-left: 1em;
  margin-top: auto;
  margin-bottom: auto;
  cursor: pointer;
  text-transform: uppercase;
}
.photo-section {
  display: flex;
  background-size: cover;
  background-position: center;
  height: 60vh;
}
.welcome {
  background-image: url("/src/assets/brand");
}
.welcome p {
  display: flex;
  text-shadow: 3px 3px 3px #50250c, 3px 3px 5px #50250c, 3px 3px 10px #50250c,
    3px 3px 16px #50250c, 3px 3px 28px #50250c;
  font-size: 7vmin;
  justify-items: center;
  margin: auto;
  color: white;
}

.collection {
  overflow: hidden;
  height: 120px;
  display: flex;
  width: 100%;
}
.btn-collec {
  transform: rotate(-5deg);
  box-shadow: none;
  height: 3rem;
  width: 15vw;
  min-width: 100px;
  max-width: 170px;
  margin-top: 2em;
  margin-left: 2em;
  border-radius: 0.8em;
  background-color: #f4ca5c;
  font-size: 1.4rem;
}

.collection .btn-more {
  font-size: 1.5rem;
  border: none;
  background: none;
  margin: 2.5em 2em auto auto;
  align-self: center;
  justify-content: flex-end;
  cursor: pointer;
}
.collection .btn-more:hover {
  background-color: #f8f0de;
  border-radius: 20%;
  box-shadow: 3px 3px 3px #f8f0de;
}
.btn-more img {
  margin-left: 1em;
  margin-bottom: 0.27em;
  color: #50250c;
}
.collec-scroll {
  height: auto;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  /* background-color: rgb(255, 255, 255); */
  -ms-overflow-style: none;
  scrollbar-width: none;
  margin-bottom: 2em;
}
.collec-scroll::-webkit-scrollbar {
  display: none;
}
.collec-cart {
  display: inline-block;
  width: 35vw;
  height: 45vw;
  margin: 1em;
  text-align: center;
  font-size: 2rem;
  text-transform: uppercase;
}
.collec-cart p {
  margin-top: 1.5em;
  font-size: 1.3rem;
  text-decoration: underline 3px #dfd0bf;
}
.collec-cart p:hover {
  text-decoration: underline 3px #f4ca5c;
}
/* to automate with JS to go tho server data  */
.cart-image {
  width: 80%;
  height: 80%;
  margin: 0.7em auto;
  background-size: cover;
  background-position: bottom;
  border-radius: 0.5em;
  border: 10px solid rgba(255, 255, 255, 0.685);
}

.cart-image-1 {
  background-image: url("/src/assets/collection/bandouliere-back-to-school.jpg");
}
.cart-image-2 {
  background-image: url("/src/assets/collection/bandouliere-poignee-metal-et-bi-matiere.jpg");
}
.cart-image-3 {
  background-image: url("/src/assets/collection/cabas-bi-matiere-poche-devant-avec-foulard.jpg");
}
.cart-image-4 {
  background-image: url("/src/assets/collection/sac-cabas-detail-tresse.jpg");
}
.cart-image-5 {
  background-image: url("/src/assets/collection/shopper-bi-matiere-details-clous.jpg");
}

span .cart {
  position: relative;
}
span .count {
  font-size: 1rem;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: 600;
  padding-left: 0.5em;
  text-align: center;
  margin: auto;
  position: absolute;
  top: 0.3rem;
  right: 0.5rem;
  height: 30px;
  width: 30px;
  background-color: #f4ca5c;
  border: 1px solid black;
  z-index: 100;
  border-radius: 50%;
}
#products {
  position: relative;
  background: #c0bbba; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to right,
    #5a5959,
    #c0bbba
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to right,
    #5a5959,
    #c0bbba
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

  height: auto;
}
.product-list {
  margin-top: 4em;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
}
#sticker {
  position: absolute;
  height: 20vw;
  width: 20vw;
  min-width: 145px;
  max-width: 228px;
  min-height: 145px;
  max-height: 228px;
  color: white;
  background-color: #c0bbba;
  border: 10px solid white;
  border-radius: 50%;
  top: -9vw;
  right: 4vw;
  z-index: 100;
  text-align: center;
  font-size: 1.8em;
  padding-top: 5.5vw;
}
.product-cart {
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-wrap: wrap;
  margin: 2em auto;
  background-color: #e5e5e5;
  border-radius: 0.5em;
  width: 45%;
  height: 45vw;
  text-align: center;
  justify-content: space-around;
  font-size: 1.5rem;
}
.product-cart p {
  margin: auto 0.3em;
}
.product-cart:hover .cart-product {
  width: 100%;
  height: 80%;
  background-position: bottom;
  transition-duration: 1s;
}

.cart-product {
  display: flex;
  width: 90%;
  height: 80%;
  background-position: center;
  background-size: cover;
  transition-duration: 1s;
}
.product-1 {
  background-image: url("/src/assets/collection/front/string-bag-brown.jpg");
}
.product-2 {
  background-image: url("/src/assets/collection/front/ring-bag-black.jpg");
}
.product-3 {
  background-image: url("/src/assets/collection/front/fancy-bag-pink.jpg");
}
.product-4 {
  background-image: url("/src/assets/collection/front/classic-bag-green.jpg");
}

.product-5 {
  background-image: url("/src/assets/collection/front/classic-bag-red.jpg");
}
.colors {
  height: 20px;
  width: 20px;
  border-radius: 50%;
}
.brown {
  background-color: #a15927;
  border: 3px solid rgb(255, 255, 255);
}
.black {
  background-color: #111110;
  border: 3px solid rgb(255, 255, 255);
}
.lightpink {
  background-color: #dab3aa;
  border: 3px solid rgb(255, 255, 255);
}
.green {
  background-color: #193135;
  border: 3px solid rgb(255, 255, 255);
}
.orange {
  background-color: #d08706;
  border: 3px solid rgb(255, 255, 255);
}
.darkred {
  background-color: #571119;
  border: 3px solid rgb(255, 255, 255);
}

.btn-cart {
  border-radius: 0.2em;
  border: 2px solid #50250c;
  background-color: #e5e5e5;
  color: #50250c;
  transition-duration: 0.7s;
  cursor: pointer;
}

.btn-buy {
  min-height: 40px;
  min-width: 60px;
  font-size: 1rem;
  font-weight: 500;
  margin: auto 1em;
}
.btn-cart:hover {
  background-color: #f4ca5c;
  color: #070707;
  transition-duration: 0.7s;
}
.btn-browse {
  font-size: 1.8rem;
  margin: 1em auto 2.5em auto;
  padding: 0.3em 0.5em;
}
.philo {
  background-image: url("/src/assets/office");
  background-blend-mode: saturation;
  color: black;
}
.philo p {
  font-size: 2.5rem;
  font-weight: 700;
}
.philo div {
  width: 500px;
  justify-content: center;
  text-align: center;
  background-color: rgba(255, 255, 255, 0.65);
  padding: 1em 1em;
  margin: auto;
  border-radius: 0.5em;
}
.btn-read {
  font-size: 1.8rem;
  margin: 0.5em auto;
  padding: 0.1em 0.5em;
}
.news {
  width: 70%;
  height: auto;
  display: flex;
  flex-wrap: wrap;
  font-size: 2em;
  justify-content: center;
  text-align: center;
  margin: auto;
  flex-direction: row-reverse;
}
.wrapping {
  flex-wrap: wrap;
  height: 200px;
  align-self: center;
  margin: 5em auto;
}
.email {
  color: black;
  display: flex;
  font-size: 2em;
  justify-content: center;
  text-align: center;
  margin: auto;
}
.news input {
  height: 80px;
  border: 2px solid black;
  padding: 1em;
}
.news svg {
  height: 80px;
  width: 120px;
  padding: 0.3em;
}
.news svg:hover {
  fill: orange;
  cursor: pointer;
}
footer {
  display: flex;
  margin: auto;
  padding: 0.8em 2em;
  align-items: center;
  background-size: cover;
  background-position: center;
  background-color: #f4ca5c;
  text-align: center;
  height: auto;
}
footer span {
  justify-content: flex-end;
  margin-left: auto;
}
nav svg:hover {
  cursor: pointer;
  background-color: #f8f0de;
  box-shadow: 3px 3px 3px #f8f0de;
  border-radius: 50%;
}
.drawer {
  position: absolute;
  top: -250px;
  display: flex;
  flex-wrap: nowrap;
  background-color: rgba(255, 255, 255, 0.534);
  font-size: 1.5em;
  width: 100%;
  margin-top: 60px;
  height: 150px;
}
.drawer ul {
  flex-direction: column;
  justify-content: space-around;
  margin: auto;
  height: 100%;
}
#hamburger {
  position: absolute;
  right: 5px;
  display: none;
}
.menu {
  top: 0px;
}

@media screen and (max-width: 770px) {
  span ul,
  .cart {
    display: none;
    visibility: hidden;
  }
  .philo p {
    font-size: 1.5rem;
    font-weight: 700;
  }
  .collec-cart {
    font-size: 1rem;
  }
  .product-cart {
    width: 85%;
    height: 95vw;
    font-size: 1rem;
  }
  .news {
    flex-direction: column-reverse;
    margin: 0.5em auto;
    align-items: center;
  }
  .news input {
    width: 80%;
  }
  .btn-browse {
    font-size: 1.5rem;
    margin: 1em auto 2.5em auto;
    padding: 0.3em 0.5em;
  }
  .btn-read {
    font-size: 1.5rem;
  }
  .welcome {
    height: 45vh;
  }
  header h1 {
    font-size: 1.3rem;
    flex-shrink: 0;
  }
  nav svg {
    width: 45px;
    height: 45px;
  }
  .collec-cart {
    width: 70vw;
    height: 80vw;
    margin: 1em;
    font-size: 2rem;
  }
  #hamburger {
    display: block;
  }
}
/** 
YELLOW #F4CA5C
LIGHT BROWN #A78163
BROWN #50250C 
LIGHT BEIGE #F8F0DE
BEIGE #DFD0BF
*/

